# cse593-hsif

./: .gitmodules  README.md
hsif/: .gitignore  CMakeLists.txt  CMakeSettings.json
hsif/src/: CMakeLists.txt  main.cpp
hsif/src/comms/: CMakeLists.txt  Endpoint.cpp  Endpoint.hpp  Server.cpp  Server.hpp
hsif/src/comms/tests/: CMakeLists.txt  utEndpoint.cpp
hsif/src/data/: CMakeLists.txt  DataManager.cpp  DataManager.hpp  MsgData.cpp  MsgData.hpp
hsif/src/data/tests/: CMakeLists.txt
hsif/src/sys/: CMakeLists.txt  Sys.cpp  Sys.hpp
hsif/src/sys/tests/: CMakeLists.txt
hsif/src/util/: CMakeLists.txt  Logger.hpp
hsif/src/util/tests/: CMakeLists.txt
hsif/tests/: CMakeLists.txt  utEndpoint.cpp  utLogger.cpp  utMsgData.cpp  utServer.cpp
rpi/: base_endpoint.py  hsif_endpoint.py  rpi_endpt_emu.py  rpi_endpt_hw.py  setup_tap.sh  start-qemu.sh  test_server.py
unity/: HSIFComponent.cs  HSIFDisplay.cs  HSIFMsg.cs
unity-package/: hsif-demo.unitypackage
